lab1_2/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: %empty
   14       | ID

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: error
   19       | ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: %empty
   26         | Stmt StmtList

   27 Stmt: error SEMI
   28     | Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | WHILE LP Exp RP Stmt

   34 DefList: Def DefList
   35        | %empty

   36 Def: Specifier DecList SEMI

   37 DecList: Dec
   38        | Dec COMMA DecList

   39 Dec: error
   40    | VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp DOT ID
   57    | ID
   58    | INT
   59    | FLOAT

   60 Args: Exp COMMA Args
   61     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 18 27 39
INT (258) 17 58
FLOAT (259) 59
ID (260) 14 15 16 19 20 53 54 56 57
SEMI (261) 4 5 27 28 30 36
COMMA (262) 8 21 38 60
ASSIGNOP (263) 41 42
RELOP (264) 45
PLUS (265) 46
MINUS (266) 47 51
STAR (267) 48
DIV (268) 49
AND (269) 43
OR (270) 44
DOT (271) 56
NOT (272) 52
TYPE (273) 9
LP (274) 19 20 31 32 33 50 53 54
RP (275) 19 20 31 32 33 50 53 54
LB (276) 17 55
RB (277) 17 55
LC (278) 11 24
RC (279) 11 24
STRUCT (280) 11 12
RETURN (281) 30
IF (282) 31 32
ELSE (283) 32
WHILE (284) 33
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 3
ExtDef (34)
    on left: 4 5 6, on right: 3
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 23 36
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17, on right: 7 8 17 23 40 41
FunDec (41)
    on left: 18 19 20, on right: 6
VarList (42)
    on left: 21 22, on right: 19 21
ParamDec (43)
    on left: 23, on right: 21 22
CompSt (44)
    on left: 24, on right: 6 29
StmtList (45)
    on left: 25 26, on right: 24 26
Stmt (46)
    on left: 27 28 29 30 31 32 33, on right: 26 31 32 33
DefList (47)
    on left: 34 35, on right: 11 24 34
Def (48)
    on left: 36, on right: 34
DecList (49)
    on left: 37 38, on right: 36 38
Dec (50)
    on left: 39 40 41, on right: 37 38
Exp (51)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59,
    on right: 28 30 31 32 33 41 42 43 44 45 46 47 48 49 50 51 52 55
    56 60 61
Args (52)
    on left: 60 61, on right: 53 60


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 13 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   14 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 13

   18 FunDec: error .

    $default  reduce using rule 18 (FunDec)


State 14

   16 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 16 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 24

    CompSt  go to state 25


State 19

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 20

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 17


State 23

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 24

   24 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 28


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   36 Def: Specifier . DecList SEMI

    error  shift, and go to state 37
    ID     shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 27

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 41


State 28

   34 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 28


State 29

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 30

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 43


State 31

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 32

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 22 (VarList)


State 33

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 34

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 35

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


State 36

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 24
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 37

   39 Dec: error .

    $default  reduce using rule 39 (Dec)


State 38

   17 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61
    LB        shift, and go to state 23

    $default  reduce using rule 40 (Dec)


State 39

   36 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


State 40

   37 DecList: Dec .
   38        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 37 (DecList)


State 41

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 42

   34 DefList: Def DefList .

    $default  reduce using rule 34 (DefList)


State 43

   17 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 23 (ParamDec)


State 44

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 45

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 32


State 46

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 47

   27 Stmt: error . SEMI

    SEMI  shift, and go to state 65


State 48

   58 Exp: INT .

    $default  reduce using rule 58 (Exp)


State 49

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


State 50

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   57    | ID .

    LP  shift, and go to state 66

    $default  reduce using rule 57 (Exp)


State 51

   51 Exp: MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 67


State 52

   52 Exp: NOT . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 68


State 53

   50 Exp: LP . Exp RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 69


State 54

   30 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 70


State 55

   31 Stmt: IF . LP Exp RP Stmt
   32     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 71


State 56

   33 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 72


State 57

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 58

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 73


State 59

   26 StmtList: Stmt . StmtList

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 24
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 74
    Stmt      go to state 59
    Exp       go to state 60


State 60

   28 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85


State 61

   41 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 86


State 62

   36 Def: Specifier DecList SEMI .

    $default  reduce using rule 36 (Def)


State 63

   38 DecList: Dec COMMA . DecList

    error  shift, and go to state 37
    ID     shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 87
    Dec      go to state 40


State 64

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 65

   27 Stmt: error SEMI .

    $default  reduce using rule 27 (Stmt)


State 66

   53 Exp: ID LP . Args RP
   54    | ID LP . RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 88

    Exp   go to state 89
    Args  go to state 90


State 67

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    STAR  shift, and go to state 80
    DIV   shift, and go to state 81
    DOT   shift, and go to state 84
    LB    shift, and go to state 85

    $default  reduce using rule 51 (Exp)


State 68

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | NOT Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 52 (Exp)


State 69

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . RP
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 91
    LB        shift, and go to state 85


State 70

   30 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85


State 71

   31 Stmt: IF LP . Exp RP Stmt
   32     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 93


State 72

   33 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 94


State 73

   24 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 24 (CompSt)


State 74

   26 StmtList: Stmt StmtList .

    $default  reduce using rule 26 (StmtList)


State 75

   28 Stmt: Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 76

   42 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 95


State 77

   45 Exp: Exp RELOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 96


State 78

   46 Exp: Exp PLUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 97


State 79

   47 Exp: Exp MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 98


State 80

   48 Exp: Exp STAR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 99


State 81

   49 Exp: Exp DIV . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 100


State 82

   43 Exp: Exp AND . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 101


State 83

   44 Exp: Exp OR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 102


State 84

   56 Exp: Exp DOT . ID

    ID  shift, and go to state 103


State 85

   55 Exp: Exp LB . Exp RB

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 104


State 86

   41 Dec: VarDec ASSIGNOP Exp .
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85

    $default  reduce using rule 41 (Dec)


State 87

   38 DecList: Dec COMMA DecList .

    $default  reduce using rule 38 (DecList)


State 88

   54 Exp: ID LP RP .

    $default  reduce using rule 54 (Exp)


State 89

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60 Args: Exp . COMMA Args
   61     | Exp .

    COMMA     shift, and go to state 105
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85

    $default  reduce using rule 61 (Args)


State 90

   53 Exp: ID LP Args . RP

    RP  shift, and go to state 106


State 91

   50 Exp: LP Exp RP .

    $default  reduce using rule 50 (Exp)


State 92

   30 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 93

   31 Stmt: IF LP Exp . RP Stmt
   32     | IF LP Exp . RP Stmt ELSE Stmt
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
